hphp/hack/test/typecheck/expression_trees/invalid_operator.php.exp
File "invalid_operator.php", line 77, characters 13-18:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 80, characters 13-22:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 81, characters 13-21:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 84, characters 13-20:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 87, characters 13-36:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 90, characters 22-39:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 91, characters 22-50:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 94, characters 14-15:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 97, characters 32-36:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 98, characters 32-38:
Unsupported syntax for expression trees. (Parsing[1002])
File "invalid_operator.php", line 101, characters 24-30:
Unsupported syntax for expression trees. (Parsing[1002])
